# academic-research-assistant

./: .env.example  .gitignore  Dockerfile  README.md  celery_worker.py  docker-compose.yml  main.py  pyproject.toml
docs/: DEPLOYMENT.md  QUICKSTART.md  README.md
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/[lang]/: layout.tsx  page.tsx  search-page.tsx
frontend/src/app/[lang]/chat/: page.tsx
frontend/src/app/[lang]/projects/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/projects/: page.tsx
frontend/src/components/: header.tsx
src/: __init__.py  config.py
src/agents/: __init__.py  main_graph.py  parser_agent.py  rag_agent.py  search_agent.py
src/api/: __init__.py  main.py
src/api/routes/: auth.py  briefings.py  chat.py  export.py  parse.py  projects.py  search.py
src/db/: __init__.py
src/models/: __init__.py  chat.py  paper.py  project.py  search.py  user.py
src/services/: __init__.py  cache.py  embedding.py  llm.py  pdf_parser.py  vector_store.py
src/services/adapters/: __init__.py  base.py  ebsco_adapter.py  google_scholar_adapter.py  pubmed_adapter.py  scopus_adapter.py  wos_adapter.py
src/tasks/: __init__.py  briefing.py  celery_app.py  parser.py
src/utils/: __init__.py  citation.py  errors.py  http.py  logging.py  metrics.py  pdf.py  rate_limit.py  text.py
tests/: __init__.py  test_api.py  test_models.py  test_parser.py  test_search.py  test_search_agent.py  test_utils.py
