[project]
name = "academic-research-assistant"
version = "0.1.0"
description = "LangGraph-based Academic Research Assistant for multi-database literature search and analysis"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "pymupdf>=1.24.0",
    "pinecone>=5.0.0",
    "weaviate-client>=4.0.0",
    "redis>=5.0.0",
    "celery>=5.4.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "aiohttp>=3.10.0",
    "tenacity>=8.3.0",
    "tiktoken>=0.7.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.12",
    "passlib>=1.7.4",
    "bcrypt>=4.2.0",
    "python-jose[cryptography]>=3.3.0",
    "itsdangerous>=2.2.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.14.0",
    "pre-commit>=4.1.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python-version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
